--- a/index.html
+++ b/index.html
@@ -18,48 +18,63 @@
 
   <section id="platform" class="p-6 max-w-4xl mx-auto">
     <h2 class="text-2xl font-semibold mb-2 text-white">The MDC Framework</h2>
-    <p class="mb-4">MDC stands for Metal-Drug Complex - a novel therapeutic architecture based on selective metal-ligand dynamics. These complexes:
+    <p class="mb-4">MDC, or Metal-Drug Complex, represents a transformative therapeutic architecture leveraging selective metal-ligand dynamics. These complexes are engineered to:
       <ul class="list-disc list-inside text-gray-400">
-        <li>Reprogram drug activity</li>
-        <li>Enable multivalent molecular interactions</li>
-        <li>Enhance tissue-specific targeting and bioactivity</li>
+        <li>Reprogram drug activity through condition-responsive activation (e.g., pH, oxidative stress triggers).</li>
+        <li>Enable multivalent molecular interactions, amplifying efficacy via coordinated metal-ligand synergies.</li>
+        <li>Enhance tissue-specific targeting and bioactivity with precision-tuned stabilizing and targeting moieties.</li>
+        <li>Facilitate modular design, allowing customization of metal cores (e.g., Cu²⁺, Ga³⁺, Fe²⁺) and bioactive ligands.</li>
       </ul>
     </p>
-    <p class="text-gray-400">MDC is not just a drug - it's a system of logic built from atoms. Built for RNA, protein, or receptor-level modulation through mechanisms such as metal ion chelation, structural interference, and signal amplification.</p>
+    <p class="text-gray-400">MDC transcends traditional drug paradigms by embedding chemical intelligence at the atomic level. It operates as a programmable system for RNA, protein, or receptor modulation, employing mechanisms such as metal ion chelation, structural interference, signal amplification, and probabilistic behavior prediction. Integrated with advanced computational modeling, MDC designs are optimized for stability, toxicity, and therapeutic precision, as demonstrated in preclinical applications targeting multidrug-resistant pathogens.</p>
   </section>
 
   <section class="p-6 max-w-4xl mx-auto">
     <h2 class="text-2xl font-semibold mb-2 text-white">Strategic Use Cases</h2>
+    <p class="mb-2 text-gray-400">The MDC Platform’s versatility enables a range of high-impact applications, including:</p>
     <ul class="list-disc list-inside text-gray-400">
-      <li><strong>Antiviral Constructs</strong> - Disrupt viral replication or capsid assembly via targeted coordination chemistry.</li>
-      <li><strong>RNA Regulatory Interfaces</strong> - Chemically influence RNA folding, translation, or decay.</li>
-      <li><strong>Neurochemical Modulators</strong> - Cross BBB with precision ligands to target inflammation or ion channels.</li>
+      <li><strong>Antiviral Constructs</strong>: Disrupt viral replication or capsid assembly through targeted coordination chemistry, as exemplified by Ga³⁺-based complexes inhibiting carbapenem-resistant Enterobacteriaceae (CRE) with multi-mechanistic action (e.g., DNA gyrase inhibition, membrane destabilization).</li>
+      <li><strong>RNA Regulatory Interfaces</strong>: Chemically influence RNA folding, translation, or decay via metal-mediated interactions, offering potential for antiviral or gene-regulatory therapies.</li>
+      <li><strong>Neurochemical Modulators</strong>: Cross the blood-brain barrier (BBB) with precision ligands (e.g., ruthenium-based complexes) to target inflammation, ion channels, or neurodegenerative pathways, enhancing neurological precision therapeutics.</li>
+      <li><strong>Cancer Therapeutics</strong>: Leverage platinum or copper cores for selective cytotoxicity, integrating theranostic capabilities (therapy + diagnostics) for real-time monitoring and response.</li>
+      <li><strong>Biosecurity Applications</strong>: Enable rapid response to emerging threats through decentralized synthesis, secured by digital molecular signatures and entropy-tracking safeguards.</li>
     </ul>
-    <p class="mt-2 text-gray-400">Custom complex design is available under NDA, including tunable metal cores (Zn, Cu, Fe), ligand tuning, and scaffold customization.</p>
+    <p class="mt-2 text-gray-400">Custom complex design is available under NDA, offering tunable metal cores (e.g., Zn, Cu, Fe, Ga, Pt), ligand optimization (e.g., ciprofloxacin derivatives, NO-releasing groups), and scaffold customization (e.g., histidine chelators, targeting peptides). These designs are supported by predictive logic modeling, ensuring adaptability to specific biological triggers and therapeutic needs.</p>
   </section>
 
   <section class="p-6 max-w-4xl mx-auto">
     <h2 class="text-2xl font-semibold mb-2 text-white">Partner With Us</h2>
-    <p class="text-gray-400 mb-2">MDC is currently in preclinical validation, in vitro assays, and early deployment across antiviral and neurochemical domains. We're engaging:</p>
+    <p class="text-gray-400 mb-2">The MDC Platform is advancing through preclinical validation, in vitro assays, and early deployment in antiviral, neurochemical, and oncology domains. Key developments include:</p>
     <ul class="list-disc list-inside text-gray-400">
-      <li>Molecular and RNA chemists</li>
-      <li>Drug delivery experts</li>
-      <li>Synthetic and programmable biology collaborators</li>
+      <li>Successful in silico modeling of MDC behavior against multidrug-resistant pathogens, validated in controlled assays.</li>
+      <li>Integration with decentralized microfoundry systems for rapid, secure production, as piloted in biosecurity applications.</li>
+      <li>Ongoing optimization of BBB-penetrating complexes for neurological disorders, with preliminary efficacy data.</li>
     </ul>
+    <p class="mt-2 text-gray-400">We seek collaboration with:</p>
+    <ul class="list-disc list-inside text-gray-400">
+      <li>Molecular and RNA chemists for ligand synthesis and metal coordination studies.</li>
+      <li>Drug delivery experts to enhance targeting and pharmacokinetic profiles.</li>
+      <li>Synthetic and programmable biology collaborators to integrate MDC with next-generation therapeutics.</li>
+      <li>Biotech and pharma partners for clinical translation and regulatory navigation.</li>
+    </ul>
+    <p class="mt-2 text-gray-400">Partners gain access to proprietary MDC design tools, computational modeling platforms, and secure production protocols under strict confidentiality agreements.</p>
   </section>
 
   <section id="contact" class="p-6 max-w-2xl mx-auto">
     <h2 class="text-2xl font-semibold mb-2 text-white">Secure Contact Form</h2>
-    <form action="https://getform.io/f/your-getform-endpoint" method="POST" class="space-y-4">
+    <p class="text-gray-400 mb-4">Submit inquiries via our Getform-powered endpoint for seamless integration and automation.</p>
+    <form action="https://getform.io/f/your-getform-endpoint" method="POST" enctype="multipart/form-data" class="space-y-4">
       <input type="text" name="name" placeholder="Full Name" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
       <input type="text" name="organization" placeholder="Affiliation or Organization" class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
       <input type="email" name="email" placeholder="Email Address" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
+      <input type="file" name="file" class="w-full p-2 bg-gray-900 border border-gray-700 rounded" accept=".pdf,.docx" />
       <textarea name="message" placeholder="Purpose of Inquiry" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded h-32"></textarea>
       <label class="inline-flex items-center text-gray-400">
         <input type="checkbox" name="nda" class="mr-2"> Request NDA (auto-send after submission)
       </label>
       <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Submit</button>
     </form>
+    <p class="mt-2 text-gray-400 text-sm">Powered by Getform: Automate responses, notifications, and integrations securely.</p>
   </section>
 
   <footer class="text-center p-6 border-t border-gray-800 text-gray-600 text-sm">
