--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@ A next-generation platform using metal coordination chemistry to enhance, transf
 **Call to Action:**  
 [Explore the Platform] [Partner With Us]
 
+**The Problem:**  
+Most drugs are locked in static formulations, limiting efficacy and stability in real-world biological conditions.
+
+**Our Solution:**  
+MDC Platform uses proprietary coordination chemistries to amplify therapeutic performance, shelf-life, and target specificity.
+
+**Who It’s For:**  
+- Biopharma companies  
+- Drug development researchers  
+- Government health agencies  
+- IP portfolio managers
+
 ---
 
 **Platform Overview**  
@@ -64,7 +76,12 @@ We offer:
 - Milestone-based agreements
 - MDC-as-a-Service for biotech R&D labs
 
-As the platform evolves, MDC will incorporate next-generation encryption tags, molecule provenance tracking, and endpoint-to-endpoint verification using quantum-resistant hashing for future pharmacological cybersecurity.
+As the platform evolves, MDC will integrate advanced intelligence modules for drug traceability, misuse detection, and autonomous validation:
+- Molecular digital twins with real-time anomaly detection
+- Entropy-aware safeguards against cross-reactivity
+- Tamper-proof microfoundry logic to prevent unauthorized MDC replication
+
+> Programmable molecules require programmable defense. Our infrastructure ensures that every MDC remains benevolent, traceable, and fail-safe.
 
 **CTA:**  
 [Request Call] [Secure Inquiry Form]
