--- a/index.html
+++ b/index.html
@@ -1,106 +1,107 @@
-**Website Content Draft for** metaldrug.com
+<!DOCTYPE html>
+<html lang="en" class="dark">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MDC Platform | Metal-Drug Complex</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-950 text-gray-200 font-mono">
+  <header class="p-6 text-center border-b border-gray-800">
+    <h1 class="text-3xl font-bold text-white">Redefining Drug Potential Through Molecular Synergy</h1>
+    <p class="text-gray-400 mt-2">A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.</p>
+    <div class="mt-4 space-x-4">
+      <a href="#platform" class="text-blue-400 hover:underline">Explore the Platform</a>
+      <a href="#contact" class="text-blue-400 hover:underline">Partner With Us</a>
+    </div>
+  </header>
 
----
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-xl font-semibold text-white mb-2">The Problem</h2>
+    <p class="text-gray-400 mb-4">Most drugs are locked in static formulations, limiting efficacy and stability in real-world biological conditions.</p>
+    <h2 class="text-xl font-semibold text-white mb-2">Our Solution</h2>
+    <p class="text-gray-400 mb-4">MDC Platform uses proprietary coordination chemistries to amplify therapeutic performance, shelf-life, and target specificity.</p>
+    <h2 class="text-xl font-semibold text-white mb-2">Who It’s For</h2>
+    <ul class="list-disc list-inside text-gray-400">
+      <li>Biopharma companies</li>
+      <li>Drug development researchers</li>
+      <li>Government health agencies</li>
+      <li>IP portfolio managers</li>
+    </ul>
+  </section>
 
-**Homepage**  
-**Header:**  
-Redefining Drug Potential Through Molecular Synergy
+  <section id="platform" class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">The MDC Framework</h2>
+    <p class="text-gray-400 mb-4">MDC stands for Metal-Drug Complex - a novel therapeutic architecture based on selective metal-ligand dynamics. These complexes:</p>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
+      <li>Reprogram drug activity</li>
+      <li>Enable multivalent molecular interactions</li>
+      <li>Enhance tissue-specific targeting and bioactivity</li>
+    </ul>
+    <p class="text-gray-400">MDC operates at the intersection of coordination chemistry and programmable biology. It is not just a drug - it's a system of logic built from atoms.</p>
+    <h3 class="text-xl font-semibold text-white mt-6 mb-2">Key Features</h3>
+    <ul class="list-disc list-inside text-gray-400">
+      <li>Ligand-controlled activity switching</li>
+      <li>Scaffold flexibility across molecular targets</li>
+      <li>Built for RNA, protein, or receptor-level modulation via chelation, structural interference, and signal amplification</li>
+    </ul>
+  </section>
 
-**Subheader:**  
-A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">Strategic Use Cases</h2>
+    <ul class="list-disc list-inside text-gray-400">
+      <li><strong>Antiviral Constructs</strong> – Disrupt viral replication or capsid assembly</li>
+      <li><strong>RNA Regulatory Interfaces</strong> – Influence RNA folding, translation, or decay</li>
+      <li><strong>Neurochemical Modulators</strong> – Cross BBB to modulate inflammation or ion channels</li>
+    </ul>
+    <p class="mt-2 text-gray-400">Custom complex design is available under NDA, including tunable metal cores (Zn, Cu, Fe), ligand customization, and scaffold variation.</p>
+  </section>
 
-**Call to Action:**  
-[Explore the Platform] [Partner With Us]
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">Partner With Us</h2>
+    <p class="text-gray-400 mb-2">MDC is entering deployment with preclinical validation, in vitro assays, and compound profiling underway. We engage partners in:</p>
+    <ul class="list-disc list-inside text-gray-400">
+      <li>Molecular and RNA chemistry</li>
+      <li>Advanced drug delivery</li>
+      <li>Synthetic and programmable biology</li>
+    </ul>
+    <h3 class="text-xl font-semibold text-white mt-6 mb-2">Licensing & Future Security</h3>
+    <ul class="list-disc list-inside text-gray-400">
+      <li>Exclusive licensing per drug</li>
+      <li>Milestone-based agreements</li>
+      <li>MDC-as-a-Service for biotech R&D labs</li>
+    </ul>
+    <p class="text-gray-400 mt-2">Advanced intelligence modules enable:
+      <ul class="list-disc list-inside">
+        <li>Molecular digital twins with anomaly detection</li>
+        <li>Entropy-aware safeguards against cross-reactivity</li>
+        <li>Tamper-proof microfoundry logic to prevent unauthorized MDC replication</li>
+      </ul>
+    </p>
+    <p class="text-blue-400 italic mt-2">Programmable molecules require programmable defense. Our infrastructure ensures each MDC remains benevolent, traceable, and fail-safe.</p>
+  </section>
 
-**The Problem:**  
-Most drugs are locked in static formulations, limiting efficacy and stability in real-world biological conditions.
+  <section id="contact" class="p-6 max-w-2xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">Secure Contact Form</h2>
+    <form action="https://getform.io/f/your-getform-endpoint" method="POST" class="space-y-4">
+      <input type="text" name="name" placeholder="Full Name" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
+      <input type="text" name="organization" placeholder="Affiliation or Organization" class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
+      <input type="email" name="email" placeholder="Email Address" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
+      <textarea name="message" placeholder="Purpose of Inquiry" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded h-32"></textarea>
+      <label class="inline-flex items-center text-gray-400">
+        <input type="checkbox" name="nda" class="mr-2"> Request NDA (auto-send after submission)
+      </label>
+      <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Submit</button>
+    </form>
+  </section>
 
-**Our Solution:**  
-MDC Platform uses proprietary coordination chemistries to amplify therapeutic performance, shelf-life, and target specificity.
-
-**Who It’s For:**  
-- Biopharma companies  
-- Drug development researchers  
-- Government health agencies  
-- IP portfolio managers
-
----
-
-**Platform Overview**  
-**Title:**  
-The MDC Framework
-
-**Body:**  
-MDC stands for Metal-Drug Complex - a novel therapeutic architecture based on selective metal-ligand dynamics. These complexes:
-- Reprogram drug activity
-- Enable multivalent molecular interactions
-- Enhance tissue-specific targeting and bioactivity
-
-MDC operates at the intersection of coordination chemistry and programmable biology. It is not just a drug - it's a system of logic built from atoms.
-
-**Key Features:**
-- Ligand-controlled activity switching
-- Scaffold flexibility across molecular targets
-- Built for RNA, protein, or receptor-level modulation through mechanisms such as metal ion chelation to stabilize or disrupt active sites, structural interference with protein folding or RNA secondary structures, and signal amplification via redox or conformational shifts at the molecular interface
-
----
-
-**Application Zones**  
-**Title:**  
-Strategic Use Cases
-
-**Teasers:**  
-- **Antiviral Constructs** - Disrupt viral replication or capsid assembly via targeted coordination chemistry.
-- **RNA Regulatory Interfaces** - Chemically influence RNA folding, translation, or decay.
-- **Neurochemical Modulators** - Cross BBB with precision ligands to target inflammation or ion channels.
-
-> MDC is in early-stage development across these zones. Custom complex design is available under NDA, including tunable metal cores (e.g., Zn, Cu, Fe), ligand customization for binding specificity or stability, and scaffold variation for organ- or target-specific activity.
-
----
-
-**Partner With Us**  
-**Title:**  
-We're Engaging Chemists, Biotech Engineers, and System Thinkers
-
-**Body:**  
-MDC is entering its deployment phase, with current efforts focused on preclinical validation, in vitro assays, and strategic compound profiling across antiviral and neurochemical use cases. We seek aligned minds in:
-- Molecular and RNA chemistry
-- Advanced drug delivery
-- Synthetic and programmable biology
-
-We prioritize focused collaboration, IP integrity, and purpose-driven work.
-
-**Licensing & Future Security**  
-We offer:
-- Exclusive licensing per drug
-- Milestone-based agreements
-- MDC-as-a-Service for biotech R&D labs
-
-As the platform evolves, MDC will integrate advanced intelligence modules for drug traceability, misuse detection, and autonomous validation:
-- Molecular digital twins with real-time anomaly detection
-- Entropy-aware safeguards against cross-reactivity
-- Tamper-proof microfoundry logic to prevent unauthorized MDC replication
-
-> Programmable molecules require programmable defense. Our infrastructure ensures that every MDC remains benevolent, traceable, and fail-safe.
-
-**CTA:**  
-[Request Call] [Secure Inquiry Form]
-
----
-
-**Contact**  
-Secure form with the following fields (Note: selecting 'Request NDA' will trigger an automated email with our standard non-disclosure agreement for secure information exchange):
-- Full Name
-- Affiliation or Organization
-- Email (validated for institutional domains)
-- Purpose of Inquiry
-- Checkbox: "Request NDA"
-
-Optional: Automated NDA document sent on checkbox validation. Form submissions are securely routed through Getform (free tier integration) to enable encrypted communication without requiring server-side infrastructure.
-
----
-
-**Footer**  
-© 2025 Kunfirm Technologies. All Rights Reserved. MDC Platform is a Kunfirm Biotech Initiative.
-
-[LinkedIn] [Contact] [Privacy]
+  <footer class="text-center p-6 border-t border-gray-800 text-gray-600 text-sm">
+    © 2025 Kunfirm Technologies. All Rights Reserved. MDC Platform is a Kunfirm Biotech Initiative.
+    <div class="mt-2 space-x-4">
+      <a href="#" class="hover:underline">LinkedIn</a>
+      <a href="#contact" class="hover:underline">Contact</a>
+      <a href="#" class="hover:underline">Privacy</a>
+    </div>
+  </footer>
+</body>
+</html>
