--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body class="bg-gray-950 text-gray-200 font-mono">
   <header class="p-6 text-center border-b border-gray-800">
+    <div class="flex justify-center items-center mb-4">
+      <span class="text-4xl font-extrabold text-white tracking-wide">MetalDrug</span>
+    </div>
     <h1 class="text-3xl font-bold text-white">Redefining Drug Potential Through Molecular Synergy</h1>
     <p class="text-gray-400 mt-2">A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.</p>
     <div class="mt-4 space-x-4">
