--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </section>
 
   <section id="contact" class="p-6 max-w-2xl mx-auto">
-    <h2 class="text-2xl font-semibold text-white mb-2">Secure Contact Form</h2>
+    <h2 class="text-2xl font-semibold text-white mb-2">Secure Contact Form or info@metaldrug.com</h2>
     <form action="https://getform.io/f/your-getform-endpoint" method="POST" class="space-y-4">
       <input type="text" name="name" placeholder="Full Name" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
       <input type="text" name="organization" placeholder="Affiliation or Organization" class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
