--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="dark">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="MetalDrug is a cutting-edge platform using metal coordination chemistry to reprogram drug behavior, improve targeting, and license programmable therapeutic complexes for global health applications." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MDC Platform | Metal-Drug Complex</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -9,7 +10,7 @@
 <body class="bg-gray-950 text-gray-200 font-mono">
   <header class="p-6 text-center border-b border-gray-800">
     <div class="flex justify-center items-center mb-4">
-      <span class="text-4xl font-extrabold text-white tracking-wide">MetalDrug</span>
+      <img src="metaldrug-logo.png" alt="MetalDrug Logo" class="h-12" />
     </div>
     <h1 class="text-3xl font-bold text-white">Redefining Drug Potential Through Molecular Synergy</h1>
     <p class="text-gray-400 mt-2">A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.</p>
@@ -85,7 +86,7 @@
   </section>
 
   <section id="contact" class="p-6 max-w-2xl mx-auto">
-    <h2 class="text-2xl font-semibold text-white mb-2">Secure Contact Form or info@metaldrug.com</h2>
+    <h2 class="text-2xl font-semibold text-white mb-2">Secure Contact Form</h2>
     <form action="https://getform.io/f/your-getform-endpoint" method="POST" class="space-y-4">
       <input type="text" name="name" placeholder="Full Name" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
       <input type="text" name="organization" placeholder="Affiliation or Organization" class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
