--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-950 text-gray-200 font-mono">
   <header class="p-6 text-center border-b border-gray-800">
     <div class="flex justify-center items-center mb-4">
-      <img src="metaldrug-logo.png" alt="MetalDrug Logo" class="h-12" />
+      <img src="metaldrug-logo.png" alt="MetalDrug Logo" class="h-24 mx-auto" />
     </div>
     <h1 class="text-3xl font-bold text-white">Redefining Drug Potential Through Molecular Synergy</h1>
     <p class="text-gray-400 mt-2">A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.</p>
