--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="dark">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <meta name="description" content="MetalDrug is a cutting-edge platform using metal coordination chemistry to reprogram drug behavior, improve targeting, and license programmable therapeutic complexes for global health applications." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MDC Platform | Metal-Drug Complex</title>
