--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
   <section id="contact" class="p-6 max-w-2xl mx-auto">
     <h2 class="text-2xl font-semibold text-white mb-2">Secure Contact Form</h2>
-    <form action="https://getform.io/f/your-getform-endpoint" method="POST" class="space-y-4">
+    <form action="https://getform.io/f/bkkyvkrb" method="POST" class="space-y-4">
+      <input type="hidden" name="_redirect" value="https://metaldrug.com/KT-MetalDrug-NDA.pdf" />
       <input type="text" name="name" placeholder="Full Name" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
       <input type="text" name="organization" placeholder="Affiliation or Organization" class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
       <input type="email" name="email" placeholder="Email Address" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
