--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
   <footer class="text-center p-6 border-t border-gray-800 text-gray-600 text-sm">
     © 2025 Kunfirm Technologies. All Rights Reserved. MDC Platform is a Kunfirm Biotech Initiative.
     <div class="mt-2 space-x-4">
-      <a href="#" class="hover:underline">LinkedIn</a>
-      <a href="#contact" class="hover:underline">Contact</a>
+      <a href="https://www.linkedin.com/company/metaldrug" target="_blank" class="hover:underline">LinkedIn</a>
+      <a href="info@metaldrug.com" class="hover:underline">Contact</a>
       <a href="#" class="hover:underline">Privacy</a>
     </div>
   </footer>
