--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MDC Platform | Metal-Drug Complex</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="msvalidate.01" content="EBBE89AB64F8DBAA11EB33AF73EC39AF" />
 </head>
 <body class="bg-gray-950 text-gray-200 font-mono">
   <header class="p-6 text-center border-b border-gray-800">
