--- a/library.html
+++ b/library.html
@@ -8,62 +8,43 @@
 </head>
 <body class="bg-gray-950 text-gray-200 font-mono">
   <header class="p-6 text-center border-b border-gray-800">
-    <h1 class="text-4xl font-bold text-white">MDC Library</h1>
-    <p class="text-gray-400 mt-2 text-lg">Explore a growing collection of Metal-Drug Complex prototypes, categorized by application, structure, and therapeutic class.</p>
+    <h1 class="text-3xl font-bold text-white">Metal-Drug Complex (MDC) Library</h1>
+    <p class="text-gray-400 mt-2">Explore our prototype complexes and therapeutic innovations.</p>
   </header>
 
-  <section class="p-6 max-w-6xl mx-auto">
-    <div class="grid md:grid-cols-3 gap-6">
-      <!-- Entry 1 -->
-      <div class="bg-gray-900 rounded-xl p-4 shadow hover:shadow-lg transition">
-        <h2 class="text-xl font-semibold text-white">Ga³⁺-Ciprofloxacin</h2>
-        <p class="text-gray-400 text-sm">Antibacterial complex with enhanced uptake and membrane disruption activity. Shown to reduce resistance emergence.</p>
-        <p class="text-xs text-blue-400 mt-2">Application: Antibiotics</p>
-      </div>
-
-      <!-- Entry 2 -->
-      <div class="bg-gray-900 rounded-xl p-4 shadow hover:shadow-lg transition">
-        <h2 class="text-xl font-semibold text-white">Cu²⁺-Histidine</h2>
-        <p class="text-gray-400 text-sm">Anti-inflammatory scaffold with ROS-responsive redox behavior. Designed for timed release in oxidative environments.</p>
-        <p class="text-xs text-blue-400 mt-2">Application: Neurodegenerative Disorders</p>
-      </div>
-
-      <!-- Entry 3 -->
-      <div class="bg-gray-900 rounded-xl p-4 shadow hover:shadow-lg transition">
-        <h2 class="text-xl font-semibold text-white">Zn²⁺-Ivermectin</h2>
-        <p class="text-gray-400 text-sm">Antiviral MDC prototype enhancing protein binding affinity and oral bioavailability. Targets cytoplasmic viral proteins.</p>
-        <p class="text-xs text-blue-400 mt-2">Application: Antiviral</p>
-      </div>
-
-      <!-- Entry 4 -->
-      <div class="bg-gray-900 rounded-xl p-4 shadow hover:shadow-lg transition">
-        <h2 class="text-xl font-semibold text-white">Ru⁴⁺-Doxorubicin</h2>
-        <p class="text-gray-400 text-sm">Oncology-targeted agent with pH-activated cytotoxicity. Stable at blood pH, active in acidic tumor microenvironments.</p>
-        <p class="text-xs text-blue-400 mt-2">Application: Cancer</p>
-      </div>
-
-      <!-- Entry 5 -->
-      <div class="bg-gray-900 rounded-xl p-4 shadow hover:shadow-lg transition">
-        <h2 class="text-xl font-semibold text-white">Fe²⁺-Ribavirin</h2>
-        <p class="text-gray-400 text-sm">Proposed MDC for viral hepatitis with iron-mediated targeting of hepatic enzymes. Enhances metabolic stability.</p>
-        <p class="text-xs text-blue-400 mt-2">Application: Liver Disease</p>
-      </div>
-
-      <!-- Entry 6 -->
-      <div class="bg-gray-900 rounded-xl p-4 shadow hover:shadow-lg transition">
-        <h2 class="text-xl font-semibold text-white">Bi³⁺-Minocycline</h2>
-        <p class="text-gray-400 text-sm">Neuroprotective prototype designed for spinal cord injury and CNS repair. Evaluated for axon regeneration pathways.</p>
-        <p class="text-xs text-blue-400 mt-2">Application: CNS/Trauma</p>
-      </div>
-    </div>
-
-    <div class="mt-10 text-center">
-      <p class="text-sm text-gray-400">Note: All entries are R&D stage prototypes. Licensing inquiries or full molecular data requests may be submitted via the contact form at <a href="https://metaldrug.com/#contact" class="text-blue-400 underline">metaldrug.com</a>.</p>
-    </div>
+  <section class="p-6 max-w-5xl mx-auto grid grid-cols-1 sm:grid-cols-2 gap-6">
+    <a href="ga3-ciprofloxacin.html" class="block bg-gray-800 p-4 rounded-lg border border-gray-700 hover:border-blue-500 transition">
+      <h2 class="text-xl font-bold text-white">Ga³⁺-Ciprofloxacin</h2>
+      <p class="text-gray-400 text-sm">Antibacterial complex with enhanced uptake and membrane disruption activity. Shown to reduce resistance emergence.</p>
+    </a>
+    <a href="cu2-histidine.html" class="block bg-gray-800 p-4 rounded-lg border border-gray-700 hover:border-blue-500 transition">
+      <h2 class="text-xl font-bold text-white">Cu²⁺-Histidine</h2>
+      <p class="text-gray-400 text-sm">Anti-inflammatory scaffold with ROS-responsive redox behavior. Designed for timed release in oxidative environments.</p>
+    </a>
+    <a href="zn2-ivermectin.html" class="block bg-gray-800 p-4 rounded-lg border border-gray-700 hover:border-blue-500 transition">
+      <h2 class="text-xl font-bold text-white">Zn²⁺-Ivermectin</h2>
+      <p class="text-gray-400 text-sm">Antiviral MDC prototype enhancing protein binding affinity and oral bioavailability. Targets cytoplasmic viral proteins.</p>
+    </a>
+    <a href="ru4-doxorubicin.html" class="block bg-gray-800 p-4 rounded-lg border border-gray-700 hover:border-blue-500 transition">
+      <h2 class="text-xl font-bold text-white">Ru⁴⁺-Doxorubicin</h2>
+      <p class="text-gray-400 text-sm">Oncology-targeted agent with pH-activated cytotoxicity. Stable at blood pH, active in acidic tumor microenvironments.</p>
+    </a>
+    <a href="fe2-ribavirin.html" class="block bg-gray-800 p-4 rounded-lg border border-gray-700 hover:border-blue-500 transition">
+      <h2 class="text-xl font-bold text-white">Fe²⁺-Ribavirin</h2>
+      <p class="text-gray-400 text-sm">Proposed MDC for viral hepatitis with iron-mediated targeting of hepatic enzymes. Enhances metabolic stability.</p>
+    </a>
+    <a href="bi3-minocycline.html" class="block bg-gray-800 p-4 rounded-lg border border-gray-700 hover:border-blue-500 transition">
+      <h2 class="text-xl font-bold text-white">Bi³⁺-Minocycline</h2>
+      <p class="text-gray-400 text-sm">Neuroprotective prototype designed for spinal cord injury and CNS repair. Evaluated for axon regeneration pathways.</p>
+    </a>
   </section>
 
+  <div class="text-center mt-10">
+    <a href="index.html" class="text-sm text-blue-400 underline">← Back to MDC Home/index</a>
+  </div>
+
   <footer class="text-center p-6 border-t border-gray-800 text-gray-600 text-sm mt-10">
-    © 2025 Kunfirm Technologies. MetalDrug Library is an R&D resource of KT Biotech.
+    © 2025 Kunfirm Technologies. All Rights Reserved. MDC Platform is part of the KT Biotech initiative.
   </footer>
 </body>
 </html>
