--- a/cu2-histidine.html
+++ b/cu2-histidine.html
@@ -1,44 +1,121 @@
-
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <meta name="description" content="MetalDrug is a cutting-edge platform using metal coordination chemistry to reprogram drug behavior, improve targeting, and license programmable therapeutic complexes for global health applications." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cu²⁺-Histidine | MDC Library</title>
+  <title>MDC Platform | Metal-Drug Complex</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-950 text-gray-200 font-mono">
   <header class="p-6 text-center border-b border-gray-800">
-    <h1 class="text-3xl font-bold text-white">Cu²⁺-Histidine</h1>
-    <p class="text-gray-400 mt-2 text-lg">Neuroactive Metal-Drug Complex (MDC)</p>
+    <div class="flex justify-center items-center mb-4">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 400" class="w-64 h-auto">
+        <rect width="800" height="400" fill="transparent"/>
+        <g transform="translate(130, 115)">
+          <path d="M10,0 L150,86.6 L100,173.2 L0,173.2 L-50,86.6 L0,0 Z" fill="none" stroke="white" stroke-width="8"/>
+          <circle cx="50" cy="86.6" r="15" fill="white"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="25" fill="none" stroke="white" stroke-width="5" transform="rotate(30 50 86.6)"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="25" fill="none" stroke="white" stroke-width="5" transform="rotate(-30 50 86.6)"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="70" fill="none" stroke="white" stroke-width="5"/>
+          <circle cx="115" cy="50" r="8" fill="white"/>
+        </g>
+        <text x="300" y="225" font-family="Arial, sans-serif" font-size="80" font-weight="bold" fill="white">MetalDrug</text>
+      </svg>
+    </div>
+    <h1 class="text-3xl font-bold text-white">Redefining Drug Potential Through Molecular Synergy</h1>
+    <p class="text-gray-400 mt-2">A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.</p>
+    <div class="mt-4 space-x-4">
+      <a href="#platform" class="text-blue-400 hover:underline">Explore the Platform</a>
+      <a href="#contact" class="text-blue-400 hover:underline">Partner With Us</a>
+    </div>
   </header>
-  <section class="p-6 max-w-3xl mx-auto">
-    <h2 class="text-xl font-semibold text-white mb-2">Overview</h2>
-    <p class="text-gray-400 mb-4">Cu²⁺-Histidine is a prototype MDC engineered to address oxidative stress in neurological disorders. Copper ions provide redox modulation while histidine aids in cellular uptake and targeting of inflamed or ischemic tissue zones.</p>
-    <h2 class="text-xl font-semibold text-white mb-2">Mechanism of Action</h2>
-    <ul class="list-disc list-inside text-gray-400 mb-4">
-      <li>Redox cycling of Cu²⁺ interacts with reactive oxygen species (ROS)</li>
-      <li>Timed ligand dissociation releases Cu²⁺ in response to oxidative microenvironments</li>
-      <li>Histidine serves as a chelating guide for enhanced BBB penetration</li>
+
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">Explore MDC Platform Pages</h2>
+    <ul class="list-disc list-inside text-blue-400">
+      <li><a href="library.html" class="hover:underline">MDC Library</a></li>
+      <li><a href="publications.html" class="hover:underline">Publications & Reviewer Access</a></li>
+      <li><a href="case-studies.html" class="hover:underline">Case Studies</a></li>
+      <li><a href="licensing-opportunities.html" class="hover:underline">Licensing Opportunities</a></li>
+      <li><a href="clinical-pipeline.html" class="hover:underline">Clinical Pipeline</a></li>
+      <li><a href="nda-review.html" class="hover:underline">Request Publication Review (NDA)</a></li>
+      <li><a href="contact.html" class="hover:underline">Contact Page</a></li>
     </ul>
-    <h2 class="text-xl font-semibold text-white mb-2">Key Properties</h2>
-    <ul class="list-disc list-inside text-gray-400 mb-4">
-      <li>ROS-triggered release dynamics</li>
-      <li>Suitable for chronic inflammation targeting</li>
-      <li>Demonstrated stability in simulated CSF (cerebrospinal fluid)</li>
-    </ul>
-    <h2 class="text-xl font-semibold text-white mb-2">Application</h2>
-    <p class="text-blue-400">Therapeutic Class: Neurodegenerative Disorders</p>
-    <p class="text-gray-400">Intended for diseases such as Alzheimer's, Parkinson's, and post-stroke inflammation management.</p>
-    <div class="mt-6 text-sm text-gray-500">
-      For licensing details, experimental data, or formulation assistance, contact <a href="https://metaldrug.com/#contact" class="text-blue-400 underline">info@metaldrug.com</a>.
-    </div>
-    <div class="mt-10 text-center">
-      <a href="library.html" class="text-sm text-blue-400 underline">← Back to MDC Library</a>
-    </div>
   </section>
+
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-xl font-semibold text-white mb-2">The Problem</h2>
+    <p class="text-gray-400 mb-4">Most drugs are locked in static formulations, limiting efficacy and stability in real-world biological conditions.</p>
+    <h2 class="text-xl font-semibold text-white mb-2">Our Solution</h2>
+    <p class="text-gray-400 mb-4">MDC Platform uses proprietary coordination chemistries to amplify therapeutic performance, shelf-life, and target specificity.</p>
+    <h2 class="text-xl font-semibold text-white mb-2">Who It’s For</h2>
+    <ul class="list-disc list-inside text-gray-400">
+      <li>Biopharma companies</li>
+      <li>Drug development researchers</li>
+      <li>Government health agencies</li>
+      <li>IP portfolio managers</li>
+    </ul>
+  </section>
+
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">The MDC Framework</h2>
+    <p class="text-gray-400 mb-4">MDC stands for Metal-Drug Complex - a novel therapeutic architecture based on selective metal-ligand dynamics. These complexes:</p>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
+      <li>Reprogram drug activity</li>
+      <li>Enable multivalent molecular interactions</li>
+      <li>Enhance tissue-specific targeting and bioactivity</li>
+    </ul>
+    <p class="text-gray-400 mb-6">MDC operates at the intersection of coordination chemistry and programmable biology. It is not just a drug - it's a system of logic built from atoms.</p>
+    <h3 class="text-xl font-semibold text-white mt-4 mb-2">Key Features</h3>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
+      <li>Ligand-controlled activity switching</li>
+      <li>Scaffold flexibility across molecular targets</li>
+      <li>Built for RNA, protein, or receptor-level modulation via chelation, structural interference, and signal amplification</li>
+    </ul>
+  </section>
+
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">Strategic Use Cases</h2>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
+      <li><strong>Antiviral Constructs</strong> – Disrupt viral replication or capsid assembly</li>
+      <li><strong>RNA Regulatory Interfaces</strong> – Influence RNA folding, translation, or decay</li>
+      <li><strong>Neurochemical Modulators</strong> – Cross BBB to modulate inflammation or ion channels</li>
+    </ul>
+    <p class="text-gray-400">Custom complex design is available under NDA, including tunable metal cores (Zn, Cu, Fe), ligand customization, and scaffold variation.</p>
+  </section>
+
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">Partner With Us</h2>
+    <p class="text-gray-400 mb-4">MDC is entering deployment with preclinical validation, in vitro assays, and compound profiling underway. We engage partners in:</p>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
+      <li>Molecular and RNA chemistry</li>
+      <li>Advanced drug delivery</li>
+      <li>Synthetic and programmable biology</li>
+    </ul>
+    <h3 class="text-xl font-semibold text-white mt-4 mb-2">Licensing & Future Security</h3>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
+      <li>Exclusive licensing per drug</li>
+      <li>Milestone-based agreements</li>
+      <li>MDC-as-a-Service for biotech R&D labs</li>
+    </ul>
+    <p class="text-gray-400 mb-2">Advanced intelligence modules enable:</p>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
+      <li>Molecular digital twins with anomaly detection</li>
+      <li>Entropy-aware safeguards against cross-reactivity</li>
+      <li>Tamper-proof microfoundry logic to prevent unauthorized MDC replication</li>
+    </ul>
+    <p class="text-blue-400 italic">Programmable molecules require programmable defense. Our infrastructure ensures each MDC remains benevolent, traceable, and fail-safe.</p>
+  </section>
+
   <footer class="text-center p-6 border-t border-gray-800 text-gray-600 text-sm mt-10">
-    © 2025 Kunfirm Technologies. This MDC prototype is part of the KT Biotech MetalDrug Library.
+    &copy; 2025 Kunfirm Technologies. All Rights Reserved. MDC Platform is a Kunfirm Biotech Initiative.
+    <div class="mt-2 space-x-4">
+      <a href="https://www.linkedin.com/company/metaldrug" target="_blank" class="hover:underline">LinkedIn</a>
+      <a href="contact.html" class="hover:underline">Contact</a>
+      <a href="#" class="hover:underline">Privacy</a>
+    </div>
   </footer>
 </body>
 </html>
